# source/SubsystemTests/Drivers/B2C/Client/swagger.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.0.1",
+  "openapi": "3.0.4",
   "info": {
     "title": "EDI B2C Web API",
     "version": "1.0"
@@ -271,6 +271,59 @@
           }
         }
       }
+    },
+    "/TempRequestWholesaleSettlement": {
+      "post": {
+        "tags": [
+          "TempRequestWholesaleSettlement"
+        ],
+        "operationId": "TempRequestWholesaleSettlement",
+        "parameters": [
+          {
+            "name": "api-version",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "allOf": [
+                  {
+                    "$ref": "#/components/schemas/RequestWholesaleServicesMarketDocumentV2"
+                  }
+                ]
+              }
+            },
+            "text/json": {
+              "schema": {
+                "allOf": [
+                  {
+                    "$ref": "#/components/schemas/RequestWholesaleServicesMarketDocumentV2"
+                  }
+                ]
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "allOf": [
+                  {
+                    "$ref": "#/components/schemas/RequestWholesaleServicesMarketDocumentV2"
+                  }
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -506,6 +559,60 @@
           }
         }
       },
+      "RequestWholesaleServicesMarketDocumentV2": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "senderNumber": {
+            "type": "string"
+          },
+          "senderRoleCode": {
+            "type": "string"
+          },
+          "receiverNumber": {
+            "type": "string"
+          },
+          "receiverRoleCode": {
+            "type": "string"
+          },
+          "businessReason": {
+            "type": "string"
+          },
+          "messageType": {
+            "type": "string"
+          },
+          "messageId": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "string"
+          },
+          "businessType": {
+            "type": "string",
+            "nullable": true
+          },
+          "series": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RequestWholesaleSettlementSeriesV2"
+            }
+          }
+        }
+      },
+      "RequestWholesaleSettlementChargeTypeV2": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "string",
+            "nullable": true
+          },
+          "type": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
       "RequestWholesaleSettlementMarketRequest": {
         "type": "object",
         "description": "Responsible for carrying the market message data from the incoming message before any data validation.",
@@ -552,6 +659,48 @@
                 "$ref": "#/components/schemas/PriceType"
               }
             ]
+          }
+        }
+      },
+      "RequestWholesaleSettlementSeriesV2": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "startDateAndOrTimeDateTime": {
+            "type": "string"
+          },
+          "endDateAndOrTimeDateTime": {
+            "type": "string",
+            "nullable": true
+          },
+          "meteringGridAreaDomainId": {
+            "type": "string",
+            "nullable": true
+          },
+          "energySupplierMarketParticipantId": {
+            "type": "string",
+            "nullable": true
+          },
+          "settlementVersion": {
+            "type": "string",
+            "nullable": true
+          },
+          "resolution": {
+            "type": "string",
+            "nullable": true
+          },
+          "chargeOwner": {
+            "type": "string",
+            "nullable": true
+          },
+          "chargeTypes": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RequestWholesaleSettlementChargeTypeV2"
+            }
           }
         }
       }
